# loglib

./: .clang-format  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yaml  lint.yaml
apps/: log_app.cpp  stats_collector.cpp
include/logger/: file_sink.hpp  log_entry.hpp  log_level.hpp  log_sink.hpp  logger.hpp  socket_sink.hpp  stats.hpp  utils.hpp
src/: file_sink.cpp  logger.cpp  socket_sink.cpp  stats.cpp  utils.cpp
tests/: test_concurrency_gtest.cpp  test_file_sink_gtest.cpp  test_log_level_gtest.cpp  test_logger_gtest.cpp  test_socket_sink_gtest.cpp  test_utils_gtest.cpp
